k8s/app-manifest/j26-map/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j26-map
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j26-map
  template:
    metadata:
      labels:
        app: j26-map
    spec:
      containers:
        - name: j26-map
          image: ghcr.io/scouterna/j26-map:latest
          ports:
            - containerPort: 80
