k8s/app-manifest/j26-map/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: j26-map
spec:
  selector:
    app: j26-map
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
