k8s/app-manifest/j26-map/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: j26-map
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: app.dev.j26.se
      http:
        paths:
          - path: /_services/map(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: j26-map
                port:
                  number: 80
